syntax = "proto2";

package edu.gla.kail.ad;

option java_package = "edu.gla.kail.ad";

enum InteractionType {
    TEXT = 0;
    AUDIO = 1;
    ACTION = 2;
}

message InteractionRequest {
    optional int64 start_time = 1;
    optional string client_id = 2;
    optional InteractionType interaction_type = 3;

    optional string text_input = 4;
    optional string audio_bytes = 5;
    optional string action = 6;
}
// why do we assign value to each of the variables? e.g. start time = 1
message ConversationLog {
    optional string session_id = 1;

    repeated Turn??? conversation = 2;
}


message RequestLog {
    optional string request_id = 1;
    optional int64 time = 2;
    optional string client_id = 3;
    optional InteractionType interaction_type = 4; //do we need it?

    optional string text_input = 5;
    optional string audio_bytes = 6; //not needed?
    optional string action = 7; //not needed?



}

message ResponseLog {
    optional string response_id = 1;
    optional int64 time = 2;
    optional string client_id = 3; //do we need it?
    optional string text_response = 4;
    optional string raw_response = 5;
    optional InteractionType interaction_type = 6; //do we need it?



}

message CandidateResponse {


}